@@ -29,7 +29,6 @@ GENERAL.ChunksNotLoaded=&cCould not toggle the door because its chunks could not
 GENERAL.DOORTYPE.Door=Door
 GENERAL.DOORTYPE.DrawBridge=Drawbridge
 GENERAL.DOORTYPE.Portcullis=Portcullis
-GENERAL.DOORTYPE.Elevator=Elevator
 GENERAL.DOORTYPE.SlidingDoor=Sliding Door
 GENERAL.InvalidInput.Integer=Invalid value input! Only rounded numbers are allowed!
 GENERAL.PlayerNotFound=Player not found!
@@ -54,7 +53,6 @@ GUI.DoorInitiation=Initiate door creation process
 GUI.NewDoor=New Door
 GUI.NewDrawbridge=New Drawbridge
 GUI.NewPortcullis=New Portcullis
-GUI.NewElevator=New Elevator
 GUI.NewSlidingDoor=New Sliding Door
 GUI.NewObjectLong=Initiate process to create a
 GUI.DoorHasID=This door has ID 
@@ -147,11 +145,6 @@ CREATOR.DRAWBRIDGE.Step1=&aStep 1/3: First point selected! Please select a secon
 CREATOR.DRAWBRIDGE.Step2=&aStep 2/3: Second point selected! Please select a first rotation point (aka the hinghe).\nThis is the column of blocks around which the entire door will swing.\nIf possible, try to avoid selecting a corner block.
 CREATOR.DRAWBRIDGE.Success=&aDraw bridge creation process successful!
 CREATOR.DRAWBRIDGE.Step3=&aStep 3/4: Rotation point selected, but it was a corner! Please select a second rotation point on the same axis to prevent ambiguity.
-CREATOR.ELEVATOR.Init=&aElevator creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the elevator creation process.
-CREATOR.ELEVATOR.Success=&aElevator creation process successful!
-CREATOR.ELEVATOR.Step1=&aStep 1/2: First point selected! Please select a second point!\nThe second point should be as far away from the first point while still being on the elevator.
-CREATOR.ELEVATOR.StickLore=This tool is used to create elevators.\nPlease specify the region by smacking the two opposing corners.
-CREATOR.ELEVATOR.StickReceived=&aYou have been given a Elevators Creator Stick! You will have to define the region of the elevators.\nPlease select the first end corner of the door first.
 CREATOR.SLIDINGDOOR.Init=&aSliding Door creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the sliding door creation process.
 CREATOR.SLIDINGDOOR.Success=&aSliding Door creation process successful!
 CREATOR.SLIDINGDOOR.Step1=&aStep 1/2: First point selected! Please select a second point!\nThe second point should be as far away from the first point while still being on the sliding door.
